--- a/css/style.css
+++ b/css/style.css
@@ -827,12 +827,14 @@ input[type="radio"].visually-hidden {
 .slider .dots {
   padding: 0;
   margin: 0;
+  margin-left: -80px;
   list-style-type: none;
   position: absolute;
   bottom: 22px;
-  width: 100%;
-  z-index: 2;
+  left: 50%;
+  width: 160px;
   text-align: center;
+  z-index: 2;
 }
 
 .dots li {
